@@ -2,11 +2,13 @@ Revision history for Perl module Net::Curl::Promiser
 
 0.08
 - Remove redundant stat() checks on file descriptors.
+- Clarify event loop requirement not to close FDs.
 
 0.07 Thu 6 Feb 2020
 - Fix race conditions in AnyEvent and IO::Async.
 - Ignore extra stop-poll callbacks. This appears to have been an issue
   with old libcurl versions (e.g., 7.29); there seems no reason to care.
+- IO::Async - Prevent Perl from closing FDs that libcurl expects to use.
 - Make tests work with Promise::XS.
 - Tests now print the version of the event loop being used.
 
